--- a/index.html
+++ b/index.html
@@ -836,7 +836,7 @@
                             class="relative w-full lg:w-1/2"
                         >
                             <img
-                                class="relative h-96"
+                                class="relative h-72 md:h-96 mx-auto"
                                 src="/src/assets/capa-principal-2d.png"
                                 alt=""
                             />
@@ -1205,10 +1205,10 @@
                         </div>
                     </div>
                     <div
-                        class="md:w-1/2 order-2 md:order-none mb-4 md:mb-0 flex justify-center items-center"
+                        class="w-full md:w-1/2 order-2 md:order-none mb-4 md:mb-0 flex justify-center items-center"
                     >
                         <img
-                            class="h-[500px]"
+                            class="h-72 text-center md:h-[500px]"
                             src="/src/assets/capa-pensamento-2d.png"
                             alt=""
                         />
@@ -1242,7 +1242,7 @@
                         class="w-full md:w-1/2 px-4 mb-4 md:mb-0 flex justify-center items-center"
                     >
                         <img
-                            class="h-[500px]"
+                            class="h-72 md:h-[500px]"
                             src="/src/assets/capa-gratidao-2d.png"
                             alt=""
                         />
