--- a/index.html
+++ b/index.html
@@ -1368,7 +1368,7 @@
         </section>
         <section
             style="
-                background-image: url('/src/assets/win.jpg');
+                background-image: url('/src/assets/win.webp');
                 background-size: cover;
                 background-position: top;
                 background-repeat: no-repeat;
@@ -3412,7 +3412,7 @@
                     <div class="md:w-1/3 w-full">
                         <img
                             class="md:h-72 h-52 mx-auto"
-                            src="/src/assets/selo.png"
+                            src="/src/assets/selo.webp"
                             alt=""
                         />
                     </div>
