ajuste de imagem da promoção

--- a/index.html
+++ b/index.html
@@ -3225,7 +3225,7 @@
                         ansiedade começa aqui.
                     </p>
                     <img
-                        class="py-14 md:py-0"
+                        class="py-14 w-[90%] md:w-[70%] md:py-0"
                         src="/src/assets/completo.png"
                         alt=""
                     />
