--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
     <head>
         <meta charset="UTF-8" />
         <link
             rel="icon"
             type="image/svg+xml"
-            href="favicon.svg"
+            href="/src/assets/icone.svg"
         />
         <meta
             name="viewport"
