Adicionando formas de pagamento

--- a/index.html
+++ b/index.html
@@ -3286,6 +3286,15 @@
                         >
                     </button>
                 </div>
+                <div
+                    class="w-full flex justify-center items-center"
+                >
+                    <img
+                        class="md:w-[70%] mt-10 opacity-60"
+                        src="/src/assets/cartoesazul.svg"
+                        alt=""
+                    />
+                </div>
             </div>
         </section>
         <section
@@ -3892,9 +3901,24 @@
                 </div>
             </div>
             <div
-                class="bg-azulescuro-900 pt-48 md:pt-64 z-0 relative"
+                class="md:pt-56 bg-azulescuro-900 pt-48 z-0 relative"
             >
                 <div class="container px-4 mx-auto">
+                    <div
+                        class="w-full flex flex-col justify-center items-center mb-14"
+                    >
+                        <h3
+                            class="w-full text-center text-[#212e81] font-medium text-2xl mb-6"
+                        >
+                            Formas de pagamento
+                        </h3>
+                        <img
+                            class="opacity-60 md:w-[70%]"
+                            src="/src/assets/cartoesazul.svg"
+                            alt=""
+                        />
+                    </div>
+
                     <div
                         class="flex md:flex-row flex-col flex-wrap justify-between items-center pb-3 md:pb-10"
                     >
