Finalizado o contador de tempo da promoção

--- a/index.html
+++ b/index.html
@@ -2614,12 +2614,7 @@
                         class="col-span-1 flex flex-col items-stretch"
                     >
                         <div
-                            class="border-gray-300 bg-azulclaro-100 rounded-3xl shadow-2xl bg-opacity-70 border items-stretch h-full flex flex-col"
-                            style="
-                                backdrop-filter: blur(
-                                    100px
-                                );
-                            "
+                            class="border-gray-300 bg-azulclaro-100 rounded-3xl shadow-2xl md:backdrop-blur-3xl md:bg-opacity-70 border items-stretch h-full flex flex-col"
                         >
                             <div
                                 class="border-gray-400/30 border-b"
@@ -2784,12 +2779,7 @@
                         class="col-span-1 flex flex-col h-full items-stretch"
                     >
                         <div
-                            class="border-gray-300 bg-azulclaro-100 rounded-3xl shadow-2xl bg-opacity-70 border items-stretch h-full flex flex-col"
-                            style="
-                                backdrop-filter: blur(
-                                    100px
-                                );
-                            "
+                            class="border-gray-300 bg-azulclaro-100 rounded-3xl shadow-2xl md:backdrop-blur-3xl md:bg-opacity-70 border items-stretch h-full flex flex-col"
                         >
                             <div
                                 class="border-gray-400/30 border-b"
@@ -3028,12 +3018,7 @@
                         class="col-span-1 flex flex-col h-full items-stretch"
                     >
                         <div
-                            class="border-gray-300 bg-azulclaro-100 rounded-3xl shadow-2xl bg-opacity-70 border items-stretch h-full flex flex-col"
-                            style="
-                                backdrop-filter: blur(
-                                    100px
-                                );
-                            "
+                            class="border-gray-300 bg-azulclaro-100 rounded-3xl shadow-2xl md:backdrop-blur-3xl md:bg-opacity-70 border items-stretch h-full flex flex-col"
                         >
                             <div
                                 class="border-gray-400/30 border-b"
