Ajustes solicitados pelo gago, com aumento de margem, correção dos botoes quebrados e alteracao das imagens de depoimentos

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         >
             <div class="container px-4 mx-auto">
                 <nav
-                    class="flex justify-between items-center py-8"
+                    class="flex justify-between items-center py-8 px-2"
                 >
                     <a
                         class="text-violeta-200 hover:text-violeta-300 text-2xl leading-none"
@@ -400,15 +400,14 @@
                     <div class="mb-11 md:inline-block">
                         <a
                             href="https://pay.kiwify.com.br/EhuojTk"
-                            class="focus:ring-violeta-300 hover:bg-violeta-900 hover:scale-105 border-violeta-600 text-violeta-50 bg-violeta-800 shadow-xl hover:shadow-2xl hover:shadow-violeta-500 shadow-violeta-500/80 pt-2 pb-5 px-6 font-semibold border rounded-2xl focus:ring transition-all ease-in-out duration-200"
-                            type="button"
+                            class="focus:ring-violeta-300 inline-block leading-[15px] text-center hover:bg-violeta-900 hover:scale-105 border-violeta-600 text-violeta-50 bg-violeta-800 shadow-xl shadow-violeta-500/80 hover:shadow-violeta-500 hover:shadow-2xl pt-2 pb-5 px-4 md:px-12 font-semibold border rounded-2xl focus:ring transition-all ease-in-out duration-200"
                         >
                             <span
-                                class="text-lg inline-block text-violeta-200"
+                                class="text-lg text-violeta-200"
                                 >Preciso Mudar de Vida</span
                             >
                             <span
-                                class="text-shadow-violeta block text-xl md:text-2xl uppercase leading-[13px] md:leading-[13px]"
+                                class="text-shadow-violeta block text-xl uppercase leading-[12px] md:leading-[15px]"
                                 >Quero vencer a
                                 ansiedade</span
                             >
@@ -570,15 +569,13 @@
             >
                 <a
                     href="https://pay.kiwify.com.br/EhuojTk"
-                    class="focus:ring-violeta-300 hover:bg-violeta-900 hover:scale-105 border-violeta-600 text-violeta-50 bg-violeta-800 shadow-xl hover:shadow-2xl hover:shadow-black/40 shadow-azulescuro-900/80 pt-2 pb-4 px-6 font-semibold border rounded-2xl focus:ring transition-all ease-in-out duration-200"
-                    type="button"
+                    class="focus:ring-violeta-300 leading-[15px] inline-block text-center hover:bg-violeta-900 hover:scale-105 border-violeta-600 text-violeta-50 bg-violeta-800 shadow-xl shadow-azulescuro-900/80 hover:shadow-black/40 hover:shadow-2xl pt-2 pb-5 px-4 md:px-12 font-semibold border rounded-2xl focus:ring transition-all ease-in-out duration-200"
                 >
-                    <span
-                        class="text-lg inline-block text-violeta-200"
+                    <span class="text-lg text-violeta-200"
                         >Preciso Mudar de Vida</span
                     >
                     <span
-                        class="text-shadow-violeta block text-xl md:text-2xl uppercase leading-[13px] md:leading-[20px]"
+                        class="text-shadow-violeta block text-xl uppercase leading-[12px] md:leading-[15px]"
                         >Quero vencer a ansiedade</span
                     >
                 </a>
@@ -909,7 +906,7 @@
             <div
                 class="radius-for-skewed py-20 bg-azulescuro-900"
             >
-                <div class="container mx-auto px-4">
+                <div class="container mx-auto px-8">
                     <div class="mb-10 flex flex-wrap">
                         <div
                             class="mb-10 lg:mb-0 w-full lg:w-1/2"
@@ -1146,7 +1143,7 @@
             class="md:pb-24 relative pt-36 overflow-hidden md:bg-cover bg-[url('/src/assets/wave.svg')] -mt-20 z-10"
         >
             <div
-                class="container mx-auto px-4 relative z-0 bg-transparent"
+                class="container mx-auto px-8 relative z-0 bg-transparent"
             >
                 <h2
                     class="mx-auto text-center text-4xl lg:text-7xl font-extrabold text-violet-700"
@@ -1494,7 +1491,7 @@
                     >
                 </h2>
                 <p
-                    class="max-w-6xl text-lg md:text-2xl text-violeta-100 mx-auto"
+                    class="max-w-6xl text-lg md:text-2xl text-violeta-100 mx-auto mb-10"
                 >
                     Agora que você conhece os benefícios do
                     protocolo "100 Ansiedade", gostaria de
@@ -1510,18 +1507,15 @@
                 </p>
                 <a
                     href="https://pay.kiwify.com.br/EhuojTk"
-                    class="focus:ring-violeta-300 mt-12 hover:bg-violeta-900 hover:scale-105 border-violeta-600 text-violeta-50 bg-violeta-800 shadow-xl shadow-black/90 hover:shadow-2xl hover:shadow-black pt-2 pb-5 px-3 md:px-6 font-semibold border rounded-2xl focus:ring transition-all ease-in-out duration-200"
-                    type="button"
+                    class="focus:ring-violeta-300 leading-[15px] inline-block text-center hover:bg-violeta-900 hover:scale-105 border-violeta-600 text-violeta-50 bg-violeta-800 shadow-xl shadow-black/80 hover:shadow-black hover:shadow-2xl pt-2 pb-5 px-4 md:px-12 font-semibold border rounded-2xl focus:ring transition-all ease-in-out duration-200"
                 >
-                    <span
-                        class="text-sm md:text-xl text-violeta-200"
+                    <span class="text-lg text-violeta-200"
                         >Não Vou Esperar Mais</span
                     >
                     <span
-                        class="text-shadow-violeta text-md block md:text-2xl uppercase leading-[10px] md:leading-[15px]"
+                        class="text-shadow-violeta block text-xl uppercase leading-[12px] md:leading-[15px]"
                         >Quero vencer a ansiedade
-                        agora</span
-                    >
+                    </span>
                 </a>
             </div>
         </section>
@@ -1529,7 +1523,9 @@
             id="depoimentos"
             class="relative py-24 lg:py-28 lg:pb-36 bg-azulescuro-900 overflow-hidden"
         >
-            <div class="container px-4 mx-auto relative">
+            <div
+                class="container px-4 md:px-6 mx-auto relative"
+            >
                 <h2
                     class="mb-4 text-4xl max-w-5xl lg:text-7xl text-violeta-100 font-extrabold"
                 >
@@ -1767,7 +1763,8 @@
                                             class="w-auto p-1.5"
                                         >
                                             <img
-                                                src="/src/assets/avatar-group-3.png"
+                                                class="h-12"
+                                                src="/src/assets/carlos-cardoso.png"
                                                 alt=""
                                             />
                                         </div>
@@ -1934,7 +1931,8 @@
                                             class="w-auto p-1.5"
                                         >
                                             <img
-                                                src="/src/assets/avatar-group-1.png"
+                                                class="h-12"
+                                                src="/src/assets/ana-claudia.png"
                                                 alt=""
                                             />
                                         </div>
@@ -2104,7 +2102,8 @@
                                             class="w-auto p-1.5"
                                         >
                                             <img
-                                                src="/src/assets/avatar-group-4.png"
+                                                class="h-12"
+                                                src="/src/assets/maria-cristina.png"
                                                 alt=""
                                             />
                                         </div>
@@ -2279,7 +2278,8 @@
                                             class="w-auto p-1.5"
                                         >
                                             <img
-                                                src="/src/assets/avatar-group-5.png"
+                                                class="h-12"
+                                                src="/src/assets/joana-almeida.png"
                                                 alt=""
                                             />
                                         </div>
@@ -2455,7 +2455,8 @@
                                             class="w-auto p-1.5"
                                         >
                                             <img
-                                                src="/src/assets/avatar-group-6.png"
+                                                class="h-12"
+                                                src="/src/assets/pedro-bastos.png"
                                                 alt=""
                                             />
                                         </div>
@@ -2627,7 +2628,8 @@
                                             class="w-auto p-1.5"
                                         >
                                             <img
-                                                src="/src/assets/avatar-group-7.png"
+                                                class="h-12"
+                                                src="/src/assets/laura-castro.png"
                                                 alt=""
                                             />
                                         </div>
@@ -3374,8 +3376,7 @@
 
                     <a
                         href="https://pay.kiwify.com.br/EhuojTk"
-                        class="focus:ring-violeta-300 leading-[15px] text-center hover:bg-violeta-900 hover:scale-105 border-violeta-600 text-violeta-50 bg-violeta-800 shadow-xl shadow-black/20 hover:shadow-black/40 hover:shadow-2xl pt-2 pb-5 px-4 md:px-10 xl:px-6 font-semibold border rounded-2xl focus:ring transition-all ease-in-out duration-200"
-                        type="button"
+                        class="focus:ring-violeta-300 leading-[15px] inline-block text-center hover:bg-violeta-900 hover:scale-105 border-violeta-600 text-violeta-50 bg-violeta-800 shadow-xl shadow-black/20 hover:shadow-black/40 hover:shadow-2xl pt-2 pb-5 px-4 md:px-12 font-semibold border rounded-2xl focus:ring transition-all ease-in-out duration-200"
                     >
                         <span
                             class="text-lg text-violeta-200"
@@ -3407,7 +3408,7 @@
             class="bg-cover bg-[url('/src/assets/wave.svg')]"
         >
             <div
-                class="py-16 px-4 md:px-0 container mx-auto text-center"
+                class="py-16 px-6 md:px-0 container mx-auto text-center"
             >
                 <h2
                     class="text-5xl lg:text-7xl text-violet-700 font-extrabold mb-10"
@@ -3439,7 +3440,7 @@
                         Tempo restante
                     </p>
                     <div
-                        class="my-10 px-10 md:px-16 flex justify-center gap-2 md:gap-8"
+                        class="my-10 px-4 md:px-16 flex justify-center gap-2 md:gap-8"
                     >
                         <div>
                             <div
@@ -3580,7 +3581,7 @@
                     >
                 </h2>
                 <p
-                    class="text-center text-violeta-300 text-lg md:text-2xl"
+                    class="text-center text-violeta-300 text-lg md:text-2xl mb-10"
                 >
                     Esta é a sua última chance de aproveitar
                     a promoção imperdível do protocolo "100
@@ -3598,15 +3599,14 @@
                 </p>
                 <a
                     href="https://pay.kiwify.com.br/EhuojTk"
-                    class="focus:ring-violeta-300 mt-10 hover:bg-violeta-900 hover:scale-105 border-violeta-600 text-violeta-50 bg-violeta-800 shadow-xl shadow-black/20 hover:shadow-black/40 hover:shadow-2xl pt-2 pb-5 px-4 md:px-6 font-semibold border rounded-2xl focus:ring transition ease-in-out duration-200"
-                    type="button"
+                    class="focus:ring-violeta-300 leading-[15px] inline-block text-center hover:bg-violeta-900 hover:scale-105 border-violeta-600 text-violeta-50 bg-violeta-800 shadow-xl shadow-black/20 hover:shadow-black/40 hover:shadow-2xl pt-2 pb-5 px-4 md:px-12 font-semibold border rounded-2xl focus:ring transition-all ease-in-out duration-200"
                 >
                     <span class="text-lg text-violeta-200"
-                        >Sou inteligente</span
+                        >Não Quero Perder</span
                     >
                     <span
-                        class="text-shadow-violeta block text-xl md:text-2xl uppercase leading-[12px] md:leading-[15px]"
-                        >Quero garantir minha vaga</span
+                        class="text-shadow-violeta block text-xl uppercase leading-[12px] md:leading-[15px]"
+                        >Vou aproveitar a promoção</span
                     >
                 </a>
             </div>
@@ -3645,7 +3645,7 @@
                                     Ansiedade"?</span
                                 >
                                 <svg
-                                    class="text-blueGray-300 w-4 h-4 ml-2"
+                                    class="text-blueGray-300 w-4 h-4 ml-2 shrink-0"
                                     fill="none"
                                     stroke="currentColor"
                                     viewBox="0 0 24 24"
@@ -3685,7 +3685,7 @@
                                     protocolo?</span
                                 >
                                 <svg
-                                    class="text-blueGray-300 w-4 h-4 ml-2"
+                                    class="text-blueGray-300 w-4 h-4 ml-2 shrink-0"
                                     fill="none"
                                     stroke="currentColor"
                                     viewBox="0 0 24 24"
@@ -3728,7 +3728,7 @@
                                     protocolo?</span
                                 >
                                 <svg
-                                    class="text-blueGray-300 w-4 h-4 ml-2"
+                                    class="text-blueGray-300 w-4 h-4 ml-2 shrink-0"
                                     fill="none"
                                     stroke="currentColor"
                                     viewBox="0 0 24 24"
@@ -3792,7 +3792,7 @@
                                     semana?</span
                                 >
                                 <svg
-                                    class="text-blueGray-300 w-4 h-4 ml-2"
+                                    class="text-blueGray-300 w-4 h-4 ml-2 shrink-0"
                                     fill="none"
                                     stroke="currentColor"
                                     viewBox="0 0 24 24"
@@ -3833,7 +3833,7 @@
                                     conclusão?</span
                                 >
                                 <svg
-                                    class="text-blueGray-300 w-4 h-4 ml-2"
+                                    class="text-blueGray-300 w-4 h-4 ml-2 shrink-0"
                                     fill="none"
                                     stroke="currentColor"
                                     viewBox="0 0 24 24"
@@ -3872,7 +3872,7 @@
                                     auditiva?</span
                                 >
                                 <svg
-                                    class="text-blueGray-300 w-4 h-4 ml-2"
+                                    class="text-blueGray-300 w-4 h-4 ml-2 shrink-0"
                                     fill="none"
                                     stroke="currentColor"
                                     viewBox="0 0 24 24"
@@ -3914,7 +3914,7 @@
                                     protocolo?</span
                                 >
                                 <svg
-                                    class="text-blueGray-300 w-4 h-4 ml-2"
+                                    class="text-blueGray-300 w-4 h-4 ml-2 shrink-0"
                                     fill="none"
                                     stroke="currentColor"
                                     viewBox="0 0 24 24"
@@ -3957,7 +3957,7 @@
                                     oferecida?</span
                                 >
                                 <svg
-                                    class="text-blueGray-300 w-4 h-4 ml-2"
+                                    class="text-blueGray-300 w-4 h-4 ml-2 shrink-0"
                                     fill="none"
                                     stroke="currentColor"
                                     viewBox="0 0 24 24"
