testando push - somente comentando video do panda, para não gastar banda

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                                     padding-top: 53.333333333333336%;
                                 "
                             >
-                                <iframe
+                                <!-- <iframe
                                     id="panda-876f14a8-7f2e-4e34-b858-ab2eb733f1ee"
                                     class="rounded-lg"
                                     src="https://player-vz-b7f4775d-971.tv.pandavideo.com.br/embed/?v=876f14a8-7f2e-4e34-b858-ab2eb733f1ee"
@@ -272,7 +272,7 @@
                                     width="100%"
                                     height="100%"
                                     fetchpriority="high"
-                                ></iframe>
+                                ></iframe> -->
                             </div>
                         </div>
                     </div>
